tests/baselines/reference/moduleImport.errors.txt
tests/cases/compiler/moduleImport.ts(2,17): error TS2339: Property 'Y' does not exist on type 'typeof X'.
tests/cases/compiler/moduleImport.ts(2,17): error TS2694: Namespace 'X' has no exported member 'Y'.


==== tests/cases/compiler/moduleImport.ts (2 errors) ====
    module A.B.C {
    	import XYZ = X.Y.Z;
    	               ~
!!! error TS2339: Property 'Y' does not exist on type 'typeof X'.
    	               ~
!!! error TS2694: Namespace 'X' has no exported member 'Y'.
    	export function ping(x: number) {
    		if (x>0) XYZ.pong (x-1);
    	}
    }
    
    module X {
    	import ABC = A.B.C;
    	export function pong(x: number) {
    		if (x > 0) ABC.ping(x-1);
    	}
    }